...
    <string name="github_repo_url" translatable="false">https://github.com/Drumber/Kitsune</string>
    <string name="press_back_again_to_exit">Press back again to exit</string>
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_feed">Feed</string>
    <string name="nav_library">Library</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_settings">Settings</string>

    <string name="notifications_title">Notifications</string>
...
    <string name="notification_aired">%1$s posted an update</string>
    <string name="notification_generic">%1$s sent you a notification</string>
    <string name="nav_appearance">Appearance</string>
    <string name="nav_app_logs">Application Logs</string>
    <string name="nav_os_libraries">Open Source Libraries</string>
    <string name="anime">Anime</string>
    <string name="manga">Manga</string>
    <string name="feed_tab_global">Global</string>
    <string name="feed_tab_following">Following</string>
    <string name="feed_login_required">Log in to see posts from people you follow.</string>
...
    <string name="data_rating_rank">Rating rank</string>
    <string name="title_character_appearances">Character Appearances</string>
    <string name="title_categories">Categories</string>
    <string name="title_filter">Filter</string>
    <string name="title_description">Description</string>
    <string name="title_details">Details</string>
...
    <string name="title_play_trailer">Play Trailer</string>
    <string name="title_about_me">About Me</string>
    <string name="title_episodes">Episodes</string>
    <string name="title_chapters">Chapters</string>
    <string name="title_characters">Characters</string>
    <string name="title_posts">Posts</string>
    <string name="title_reactions">Reactions</string>
...
    <string name="title_tag_unit">Tag episode/chapter</string>
    <string name="hint_search_media">Search anime or manga…</string>
    <string name="search_provider_not_available">Search is currently unavailable.</string>
    <string name="search_provider_error">Something went wrong while searching.</string>
    <string name="label_images">Images</string>
    <string name="action_add_image">Add image</string>
...
    <string name="create_post_wall_hint">Posting on %s\'s wall</string>
    <string name="create_post_group_hint">Posting in %s</string>
    <string name="profile_tab_about">Profile</string>
    <string name="profile_tab_posts">Posts</string>
    <string name="profile_post_on_wall">Post on wall</string>
...
    <string name="character_role_recurring">Recurring</string>
    <string name="character_role_cameo">Cameo</string>
    <string name="library_status_watching">Watching</string>
    <string name="library_status_planned">Want to Watch</string>
    <string name="library_status_completed">Completed</string>
...
    <string name="preference_oled_black_mode">OLED Black</string>
    <string name="preference_oled_black_mode_description">Use a black background in dark mode.</string>
    <string name="preference_app_theme">Theme</string>
    <string name="preference_dynamic_color_theme">Use Dynamic Color</string>
    <string name="preference_dynamic_color_theme_description">Adapt to the system theme.</string>
...
    <string name="logged_in_success">Logged in as %s.</string>
    <string name="login_no_account">Don\'t have an account? Create one on <a href="https://kitsu.app">kitsu.app</a>.</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="library_not_started">Not Started</string>
    <string name="library_not_rated">Not Rated</string>
    <string name="library_not_logged_in_title">Log in to access your library</string>
    <string name="library_not_logged_in_text">Log in to your Kitsu Account to manage your library and get access to all features.</string>
    <string name="library_kind_all">All</string>
...
